--- a/Mobile Phone Distribution Management System/Mobile Phone Distribution Management System.csproj
+++ b/Mobile Phone Distribution Management System/Mobile Phone Distribution Management System.csproj
@@ -54,6 +54,12 @@
     <Compile Include="FormDashboard.Designer.cs">
       <DependentUpon>FormDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormImportGoods.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormImportGoods.Designer.cs">
+      <DependentUpon>FormImportGoods.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormDashboard.resx">
       <DependentUpon>FormDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormImportGoods.resx">
+      <DependentUpon>FormImportGoods.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
