--- a/Mobile Phone Distribution Management System/Mobile Phone Distribution Management System.csproj
+++ b/Mobile Phone Distribution Management System/Mobile Phone Distribution Management System.csproj
@@ -229,5 +229,8 @@
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\logout.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
